test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 17 Jun 2025 13:32:52 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="IUkdySQ9UUoeB1ao8/ZNls/ZMemWKwfX", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}